Fix stylesheets browser parse, removed dev template caching

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="ui borderless main menu">
-        <div class="ui text container">
+        <div class="ui container">
             <div class="header item">
                 {{ appname }}
             </div>
