Style stream page w/ player and buttons. Move docker environment to base compose.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-    Index page
+    <div class="ui content container">
+        Index page
+    </div>
 {% endblock %}
