--- a/templates/stream/stream-list.html
+++ b/templates/stream/stream-list.html
@@ -4,6 +4,16 @@
 
 <div class="ui container">
     <h1 class="ui header">Stream list</h1>
+
+    <div class="ui grid">
+        {% for stream in streams %}
+        <div class="four wide column">
+            <div class="ui segment">
+                <a href="/s/{{ stream.name }}">{{ stream.name }}</a>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 </div>
 
 {% endblock %}
