--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
     {% else %}
     <title>{{ appname }}</title>
     {% endif %}
-    <link rel="stylesheet" type="text/css" href="/css/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/semantic.darkly.min.css">
     <link rel="stylesheet" type="text/css" href="/css/app.css">
     {% block styles %}{% endblock %}
 </head>
