--- a/templates/stream/stream.html
+++ b/templates/stream/stream.html
@@ -27,13 +27,17 @@
         <h1 class="ui header">{{ stream.name }}</h1>
         
         {% if not stream.is_private %}
-        <a class="ui red inverted icon button" data-tooltip="Lock stream">
-            <i class="lock icon"></i>
-        </a>
+        <form class="button form" action="/s/{{ stream.name }}/lock" method="post">
+            <button type="submit" class="ui red inverted icon button" data-tooltip="Lock stream">
+                <i class="lock icon"></i>
+            </button>
+        </form>
         {% else %}
-        <a class="ui green inverted icon button" data-tooltip="Unlock stream">
-            <i class="unlock icon"></i>
-        </a>
+        <form class="button form" action="/s/{{ stream.name }}/unlock" method="post">
+            <button type="submit" class="ui green inverted icon button" data-tooltip="Unlock stream">
+                <i class="unlock icon"></i>
+            </button>
+        </form>
         {% endif %}
 
         <a href="{{ hlsUrl }}" class="ui orange inverted button" data-tooltip="HTTP Stream | Stable" download target="_blank">
@@ -50,9 +54,18 @@
     </div>
 
     {% if isOwner %}
-    <h3 class="ui dividing header">Access Tokens</h3>
+    <h3 class="ui dividing header">
+        Access Tokens
 
-    <form class="ui form" action="/token" method="POST">
+        {% if not stream.is_private %}
+        <a class="ui small black label">
+            <i class="info circle icon"></i>
+            Not applicable: public stream
+        </a>
+        {% endif %}
+    </h3>
+
+    <form class="ui form" action="/token/{{ stream.name }}" method="POST">
 
         <div class="inline fields">
             <div class="field">
@@ -86,9 +99,11 @@
                 {% for token in stream.tokens %}
                 <tr>
                     <td>
-                        <a class="ui red inverted icon button" data-tooltip="Delete token">
-                            <i class="trash icon"></i>
-                        </a>
+                        <form action="/token/delete/{{ token.id }}" method="post">
+                            <button type="submit" class="ui red inverted icon button" data-tooltip="Delete token">
+                                <i class="trash icon"></i>
+                            </button>
+                        </form>
                     </td>
                     <td>
                         {{ token.description }}
