fix token form width on mobile devices

--- a/templates/token/use-token.html
+++ b/templates/token/use-token.html
@@ -3,8 +3,8 @@
 {% block content %}
 
     <div class="ui container">
-        <div class="ui three column centered grid">
-            <div class="column">
+        <div class="ui centered grid">
+            <div class="sixteen wide six wide computer column">
                 <div class="ui error icon message">
                     <i class="lock icon"></i>
                     <div class="content">
