HLS m3u8 links are now secured

--- a/templates/stream/stream.html
+++ b/templates/stream/stream.html
@@ -25,7 +25,7 @@
     <div class="ui inverted segment">
         <h1 class="ui header">{{ stream.name }}</h1>
 
-        <a href="{{ hlsUrl }}" class="ui orange inverted button" data-tooltip="HTTP Stream | Stable" download target="_blank">
+        <a href="{{ friendlyHlsUrl }}" class="ui orange inverted button" data-tooltip="HTTP Stream | Stable" download target="_blank">
             <i class="download icon"></i>
             VLC Playlist
         </a>
