Improve stream list

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24,6 +24,11 @@ form.button.form,
   color: black;
 }
 
+.ui.streams.grid .ui.card {
+  box-shadow: none;
+  border-radius: 0.45rem;
+}
+
 /* player */
 
 .player.wrapper {
